--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,10 @@
 	<modelVersion>4.0.0</modelVersion>
 	<packaging>pom</packaging>
 	<modules>
+		<module>mybatis-annotations</module>
+		<module>mybatis-configuration</module>
 		<module>swagger2</module>
-        <module>test</module>
+		<module>test</module>
     </modules>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
