--- a/pom.xml
+++ b/pom.xml
@@ -6,9 +6,10 @@
 	<modules>
 		<module>mybatis-annotations</module>
 		<module>mybatis-configuration</module>
-		<module>session-sharing</module>
-		<module>swagger2</module>
-		<module>test</module>
+        <module>session-sharing</module>
+        <module>slf4j-logback</module>
+        <module>swagger2</module>
+        <module>test</module>
     </modules>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
