--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,13 @@
 	<modelVersion>4.0.0</modelVersion>
 	<packaging>pom</packaging>
 	<modules>
+		<module>multi-datasource</module>
 		<module>mybatis-annotations</module>
 		<module>mybatis-configuration</module>
-        <module>session-sharing</module>
-        <module>slf4j-logback</module>
-        <module>swagger2</module>
-        <module>test</module>
+		<module>session-sharing</module>
+		<module>slf4j-logback</module>
+		<module>swagger2</module>
+		<module>test</module>
     </modules>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
