动态数据源模块

--- a/dynamic-datasource/src/main/resources/application.properties
+++ b/dynamic-datasource/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.datasource.source2.jdbcUrl = jdbc:mysql://localhost/db2?useUnicode=true&c
 spring.datasource.source2.username = guolanren
 spring.datasource.source2.password = hahaha
 spring.datasource.source2.driver-class-name = com.mysql.jdbc.Driver
+
+mybatis.configuration.log-impl = org.apache.ibatis.logging.stdout.StdOutImpl
+debug=true
