--- a/mybatis-configuration/src/main/resources/application.properties
+++ b/mybatis-configuration/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url = jdbc:mysql://localhost/mybatis?useUnicode=true&characterEncoding=utf-8&useSSL=true
+spring.datasource.url = jdbc:mysql://localhost/db?useUnicode=true&characterEncoding=utf-8&useSSL=true
 spring.datasource.username = guolanren
 spring.datasource.password = hahaha
 spring.datasource.driver-class-name = com.mysql.jdbc.Driver
