--- a/dynamic-datasource/pom.xml
+++ b/dynamic-datasource/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>dynamic-datasource</artifactId>
+    <version>1.0.0</version>
 
     <dependencies>
         <dependency>
@@ -35,6 +36,5 @@
             <scope>compile</scope>
         </dependency>
     </dependencies>
-
 
 </project>
