--- a/multi-datasource/pom.xml
+++ b/multi-datasource/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>multi-datasource</artifactId>
+    <version>1.0.1</version>
 
     <dependencies>
         <dependency>
@@ -35,4 +36,5 @@
             <scope>runtime</scope>
         </dependency>
     </dependencies>
+
 </project>
