--- a/mybatis-annotations/pom.xml
+++ b/mybatis-annotations/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>mybatis-annotations</artifactId>
+    <version>1.0.0</version>
 
     <dependencies>
         <dependency>
