--- a/swagger2/pom.xml
+++ b/swagger2/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>swagger2</artifactId>
+    <version>1.0.0</version>
 
     <dependencies>
         <dependency>
