--- a/test/pom.xml
+++ b/test/pom.xml
@@ -10,6 +10,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>test</artifactId>
+    <version>1.0.0</version>
+
     <dependencies>
         <dependency>
             <groupId>name.guolanren</groupId>
@@ -18,6 +20,5 @@
             <scope>compile</scope>
         </dependency>
     </dependencies>
-
 
 </project>
