--- a/spring-cloud/pom.xml
+++ b/spring-cloud/pom.xml
@@ -16,6 +16,8 @@
     <modules>
         <module>eureka-server</module>
         <module>eureka-client</module>
+        <module>ribbon-eureka</module>
+        <module>ribbon-single</module>
     </modules>
 
 </project>
