--- a/spring-cloud/hystrix-eureka/src/main/resources/application.properties
+++ b/spring-cloud/hystrix-eureka/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name = feign-eureka
+spring.application.name = hystrix-eureka
 
 eureka.instance.hostname = localhost
 eureka.client.service-url.defaultZone = http://localhost:8761/eureka
